k8s/coma/apps/flux-system-extras/capacitor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - capacitor.coma.artichoke.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: capacitor
          port: 9000
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
